# rally-terminal

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: Home.py  app_data.py
app/pages/: 10_MME_Export.py  11_Birkin_Comparison.py  (+12 more)
config/: scoring.yml
docs/: CUSTOM_INDEX_WORKSHOP.md  DATA_ARCHITECTURE_INVENTORY.md  EXCHANGE_MARKET_CAP.md  INDEX_METHODOLOGY.md  MANUAL_IMPORT_FORMAT.md  MANUAL_RESEARCH_WORKFLOW.md  PRODUCT_ROADMAP.md  PROJECT_CONTEXT.md  RALLY_API_CONCEPT.md  TOTAL_RETURN_EXIT_METHODOLOGY.md  data_dictionary.md  roadmap.md  source_strategy.md
reports/: collectibles_report_2026-07-02.md  collectibles_report_2026-07-22.md
scripts/: build_dataset.py  build_research_coverage.py  fetch_sec_data.py  import_manual_assets.py  import_manual_price_history.py  import_rally_portfolio_capture.py  import_sothebys_capture.py  process_manual_research.py  rebuild_exchange_history.py  rebuild_total_return_indexes.py  reconcile_current_universe.py  reconcile_index_engines.py  write_report.py
tests/: test_app_data.py  test_assets.py  test_birkin.py  test_contribution.py  test_current_universe.py  test_custom_index_storage.py  test_custom_indices.py  test_custom_portfolios.py  test_exchange_history.py  test_export.py  test_import_connectors.py  test_indices.py  test_investable.py  test_manual_imports.py  test_market_table.py  test_portfolio_engine.py  test_research.py  test_research_coverage.py  test_schemas.py  test_scoring.py  test_sec_parser.py  test_sothebys_capture.py  test_universe.py  test_valuation.py
(+113 files in other folders)
