[project]
name = "alt-asset-explorer"
version = "0.1.0"
description = "Standalone quantitative research dashboard for collectible assets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "streamlit>=1.35",
  "plotly>=5.20",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
